# gstreamer

./: .gitignore  meson.build
data/cross-files/: ios_arm64.txt
subprojects/: glib-networking.wrap  glib.wrap  harfbuzz.wrap  libsrtp2.wrap  openssl-win.wrap  orc.wrap  pango.wrap
subprojects/gst-plugins-bad/ext/srtp/: meson.build
subprojects/gst-plugins-bad/ext/webrtc/: gstwebrtcbin.c  gstwebrtcstats.c  transportstream.c  transportstream.h  utils.h  webrtcdatachannel.c  webrtctransceiver.c  webrtctransceiver.h
subprojects/gst-plugins-bad/sys/applemedia/: avfdeviceprovider.h  avfdeviceprovider.m  avfvideosrc.m
subprojects/gst-plugins-bad/sys/mediafoundation/: gstmfcapturedshow.cpp
subprojects/gst-plugins-bad/tests/check/elements/: webrtcbin.c
subprojects/gst-plugins-base/gst-libs/gst/sdp/: gstsdpmessage.c
subprojects/gst-plugins-base/tests/check/libs/: sdp.c
subprojects/gst-plugins-good/docs/: gst_plugins_cache.json
subprojects/gst-plugins-good/ext/vpx/: build_libvpx.sh  build_libvpx_linux.sh  build_libvpx_mac.sh  build_libvpx_win.sh  meson.build
subprojects/gst-plugins-good/gst/rtp/: gstrtpulpfecenc.c
subprojects/gst-plugins-good/gst/rtpmanager/: gstrtpptdemux.c  gstrtprtxreceive.c  gstrtprtxreceive.h  gstrtprtxsend.c  gstrtprtxsend.h
subprojects/gst-plugins-good/tests/check/elements/: rtprtx.c
subprojects/openssl/: meson.build
